<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PebbleTool" >

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="250dp"
        android:layout_height="82dp"
        android:ems="10"
        android:hint="@string/msg_to_pebble"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMsgClick"
        android:text="@string/send_to_pebble" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateWeather"
            android:text="@string/weather" />

        <TextView
            android:id="@+id/txtLastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <EditText
        android:id="@+id/numSMSRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NumRecipient"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnSetSMSRecipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setSMSRecipient"
        android:text="@string/SetSMSRecipient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SMS_Recipient" />

        <TextView
            android:id="@+id/txtSMSRecipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</LinearLayout>